minor updates, changed google font and css

--- a/beta/app/public/index.html
+++ b/beta/app/public/index.html
@@ -6,28 +6,30 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
     <!-- Moment.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
-
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
   </head>
   <body>
 
+    <!-- Main jumbotron and name / logo -->
     <div class="jumbotron">
       <h1 class="text-center">TwatBook</h1>
     </div>
 
+    <!-- Main container for app -->
     <div class="container">
 
+      <!-- Area to register for an account -->
+      <!-- code goes here -->
+
+      <!-- Area to submit new posts -->
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <p class="cool-font">Name</p>
@@ -39,6 +41,7 @@
         </div>
       </div>
 
+      <!-- Current user posts -->
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <h2>Posts</h2>
