--- a/public/main.html
+++ b/public/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>TwatBook</title>
         <link rel="icon" type="image/png" href="favicon.ico">
         
@@ -11,12 +10,16 @@
         <script src="handlebars-v4.1.2.js"></script>
     </head>
 
-    {{>nav}}
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="title navbar-brand">TwatBook</a>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-primary btn-outline-submit my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </nav>
 
-    <body class="{{template}}">
-        <div class="container">
-          {{feed}}
-      </div>
-      {{> footer}}
+    <body>
+        {{{feed}}}
     </body>
+
 </html>
