--- a/public/login.html
+++ b/public/login.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <title>TwatBook</title>
-        <link rel="icon" type="image/png" href="favicon.ico">
 
-        <!-- *** Links & CDNs *** -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link type="text/css" rel="stylesheet" href="styles/styles.css">
-        <script src="handlebars-v4.1.2.js"></script>
-    </head>
+<head>
+    <title>TwatBook</title>
+    <link rel="icon" type="image/png" href="favicon.ico">
 
-    <header>
-        <h1>Welcome to TwatBook!</h1>
-    </header>
+    <!-- *** Links & CDNs *** -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway+Dots|Varela+Round&display=swap" rel="stylesheet">
+    <script src="handlebars-v4.1.2.js"></script>
+</head>
 
-    <body>
-        <h2>Sign up or login</h2>
-        <div class="container">
-            <form id="login-form">            
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="John Smith" required="required">        
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">       
-                <label for="password">Password:</label>
-                <input id="password" name="password" placeholder="Password" required="required">  
-                <br>
-                <input type="submit">
-            </form>
-        </div>
-        <a class="noLoginLink" href="index.html">Continue without logging in</a>        
-    </body>
+<header>
+    <h1 class="header">welcome to twatbook</h1>
+</header>
+
+<body>
+    <img id="logo" src="../assets/images/twat-icon.png">
+    <h2 class="header">sign up or login</h2>
+    <div class="container">
+        <form id="login-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            <label for="password">Password:</label>
+            <input id="password" name="password" placeholder="Password" required="required">
+            <br>
+            <input type="submit">
+        </form>
+    </div>
+    <div class="my-wrap">
+        <a class="noLoginLink" href="index.html">Continue without logging in</a>
+    </div>
+</body>
+
 </html>
