--- a/public/login.html
+++ b/public/login.html
@@ -9,23 +9,36 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway+Dots|Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway+Dots|Varela+Round&display=swap"
+        rel="stylesheet">
     <script src="handlebars-v4.1.2.js"></script>
 </head>
 
+
+
+<nav class="navbar navbar-dark bg-dark">
+    <img src="../assets/images/twat-icon.png" style="width: 2%;">
+    <a class="title navbar-brand"
+        style="color: white; font-family: 'Varela Round', sans-serif; position: fixed; left: 4%;">twatbook</a>
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+            style="margin-bottom: 0px;">
+        <button class="btn btn-primary btn-outline-submit my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</nav>
+
 <header>
-    <h1 class="header">welcome to twatbook</h1>
-</header>
+        <h1 class="header">welcome to twatbook</h1>
+    </header>
 
 <body>
-    <img id="logo" src="../assets/images/twat-icon.png">
-    <h2 class="header">sign up or login</h2>
+    <h2 class="header">please login</h2>
     <div class="container">
         <form id="login-form">
-            <label for="name">Name:</label>
+            <label for="name">User Name:</label>
             <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            <!-- <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required"> -->
             <label for="password">Password:</label>
             <input id="password" name="password" placeholder="Password" required="required">
             <br>
