more style here

--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>TwatBook</title>
+    <title>twatbook</title>
     <link rel="icon" type="image/png" href="favicon.ico">
 
     <!-- *** Links & CDNs *** -->
